update 2 from shamim enterprise

--- a/index.html
+++ b/index.html
@@ -8,16 +8,62 @@
 		<title>Here Is Your Title</title>
 
 		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="login.css">
 
 
 	</head>
 	<body>
 
+		<br><br><br>
+
 		<!-- Section Start -->
 		<section id="loginTab">
-			<div>
-				
+			<div class="wrapper">
+				<!-- Content - 1 -->
+				<div class="content-1">
+					<h1>Sign in with a social network</h1>
+					<div class="googleAutoLogin">
+						<div class="ic">
+							G
+						</div>
+						<div class="bt">
+							Sign in with Google
+						</div>
+					</div>
+				</div>
+				<br><br><br><br>
+				<!-- End Content - 1 -->
+				<div class="border_down"></div>
+
+				<!-- Content 2 -->
+				<div class="content-2">
+					<br>
+					<h1>Sign in with your username</h1>
+					<!-- Login Form Start From Here -->
+					<form action="#" method="post">
+						<input type="text" name="username" placeholder="Username">
+						<input type="password" name="username" placeholder="Password">
+						<input type="text" name="2fa" placeholder="Two Factor (If Enable)">
+
+
+
+
+					</form>
+
+
+
+
+
+				</div>
+				<!-- End Content - 2 -->
+
+
+
+
+
+
 			</div>
+			<!-- End Of this Wrapper -->
 		</section>
 
 
