--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
 		<!-- Template Css -->
 		<link rel="stylesheet" type="text/css" href="login.css">
-		
-
 
 	</head>
 	<body>
@@ -38,8 +36,11 @@
 					</div>
 					<div class="fb-set">
 						<div class="w100">
-							<div class="wl20"><span><i class="fab fa-facebook"></i></span></div>
+
+							<div class="wl20"><div><i class="fab fa-facebook"></i></div></div>
+
 							<div class="wr80"><span><a href="" style="color: #fff;">Log In With Facebook</a></span></div>
+
 						</div>
 					</div>
 				</div>
@@ -52,36 +53,6 @@
 					<br>
 					<h1>Sign in with your username</h1>
 					<!-- Login Form Start From Here -->
-
-					<!-- from bootstrap -->
-					<!-- <form>
-					  <div class="form-row align-items-center">
-					    <div class="col-auto">
-					      <label class="sr-only" for="inlineFormInput">Name</label>
-					      <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Jane Doe">
-					    </div>
-					    <div class="col-auto">
-					      <label class="sr-only" for="inlineFormInputGroup">Username</label>
-					      <div class="input-group mb-2">
-					        <div class="input-group-prepend">
-					          <div class="input-group-text"><i class="fas fa-user"></i></div>
-					        </div>
-					        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
-					      </div>
-					    </div>
-					    <div class="col-auto">
-					      <div class="form-check mb-2">
-					        <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-					        <label class="form-check-label" for="autoSizingCheck">
-					          Remember me
-					        </label>
-					      </div>
-					    </div>
-					    <div class="col-auto">
-					      <button type="submit" class="btn btn-primary mb-2">Submit</button>
-					    </div>
-					  </div>
-					</form> -->
 
  					<!-- own form -->
 					<form action="#" method="post">
@@ -104,9 +75,9 @@
 							</div>
 							<input type="text" name="2fa" placeholder="Two Factor (If Enable)">
 						</div>
-						<a href="#">Reset Two Factor »</a>
+						<a href="#" style="margin-bottom: 10px;">Reset Two Factor »</a>
 						<!-- captha start -->
-
+      					<div class="g-recaptcha" data-sitekey="your_site_key"></div>
 						<!-- end captha -->
 						<!-- submit -->
 						<br><br>
@@ -124,28 +95,17 @@
 						<a href="#">Reset Password »</a>
 						</div>
 					</div>
-
-
-
 				</div>
 				<!-- End Content - 2 -->
-
-
-
-
-
-
 			</div>
 			<!-- End Of this Wrapper -->
 		</section>
 
 		<!-- js -->
-		<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<!-- font awesome -->
 		<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br>
+		
 	</body>
 </html>
