--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 							</div>
 							<input type="text" name="2fa" placeholder="Two Factor (If Enable)">
 						</div>
-						<a href="#" style="margin-bottom: 10px;">Reset Two Factor »</a>
+						<a href="#" style="margin-bottom: 10px;">Reset Two Factor</a>
 						<!-- captha start -->
       					<div class="g-recaptcha" data-sitekey="your_site_key"></div>
 						<!-- end captha -->
 						<!-- submit -->
 						<br><br>
-						<center><input type="submit" name="submit" value="Login »"></center>
+						<center><input type="submit" name="submit" value="Login"></center>
 					</form>
 					<!-- end own form -->
 
@@ -89,10 +89,10 @@
 					<br><br>
 					<div class="w100">
 						<div class="wl">
-							<a href="#">Register Here »</a>
+							<a href="#">Register Here</a>
 						</div>
 						<div class="wr">
-						<a href="#">Reset Password »</a>
+						<a href="#">Reset Password</a>
 						</div>
 					</div>
 				</div>
